# libsmc-svn

./: AUTHORS  Doxyfile  TODO  configure.in  libsmc.kdevelop
libsmc/: README  TODO  libsmc.tag
libsmc/src/: Makefile.am  Makefile.in  exception.cpp  exception.h  musiclibrary.cpp  musiclibrary.h  xmlparser.cpp
src/: Makefile.am  exception.cpp  exception.h  fileinfo.cpp  fileinfo.h  musiclibrary.cpp  musiclibrary.h  xmlparser.cpp  xmlparser.h
templates/: h
